--- a/pweb_eCarSharing/Views/CarStation/AddCarStation.cshtml
+++ b/pweb_eCarSharing/Views/CarStation/AddCarStation.cshtml
@@ -5,11 +5,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h2>Add a new Car Station</h2>
+        <h2>New Car Station</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            <label>In what city is the station?</label>
+            <label>Car Station Location</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.stationCity, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.stationCity, "", new { @class = "text-danger" })
@@ -17,7 +17,7 @@
         </div>
 
         <div class="form-group">
-            <label>The Adress where it is at:</label>
+            <label>Street Address</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.stationAdress, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.stationAdress, "", new { @class = "text-danger" })
