--- a/pweb_eCarSharing/Views/CarStation/RemCarStation.cshtml
+++ b/pweb_eCarSharing/Views/CarStation/RemCarStation.cshtml
@@ -8,13 +8,18 @@
         <h2>Remove Car Station by ID</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <label>The id of the Station to remove:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.stationID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.stationID, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label>The id of the Station to remove:</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.stationID, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.stationID, "", new { @class = "text-danger" })
         </div>
+        @if (ViewBag.error == true)
+        {
+            <label class="ml-3" style="color: red; font-size: 12px;"> Please enter a valid id</label>
+        }
+    </div>
+     
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
