All controllers check if user's input data is valid. If not return view with error message. All views reflect action to previous statement logic.

--- a/pweb_eCarSharing/Views/CarStation/RemCarStation.cshtml
+++ b/pweb_eCarSharing/Views/CarStation/RemCarStation.cshtml
@@ -16,7 +16,7 @@
         </div>
         @if (ViewBag.error == true)
         {
-            <label class="ml-3" style="color: red; font-size: 12px;"> Please enter a valid id</label>
+    <label class="ml-3" style="color: red; font-size: 12px;"> Please enter an existing car station id</label>
         }
     </div>
      
