--- a/pweb_eCarSharing/Views/Reservation/ChangeRentalData.cshtml
+++ b/pweb_eCarSharing/Views/Reservation/ChangeRentalData.cshtml
@@ -41,7 +41,7 @@
         </div>
         @if (ViewBag.error == true) 
         {
-            <label style="color: red; font-size: 12px;">Error: Values can't be '0'</label>
+            <label style="color: red; font-size: 12px;">Please enter valid information</label>
         }
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
