--- a/pweb_eCarSharing/Views/Reservation/RemRentalData.cshtml
+++ b/pweb_eCarSharing/Views/Reservation/RemRentalData.cshtml
@@ -8,13 +8,17 @@
         <h2>Remove Reservation by ID</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <label>ID of the reservation to remove:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.reservationID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.reservationID, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label>ID of the reservation to remove:</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.reservationID, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.reservationID, "", new { @class = "text-danger" })
         </div>
+        @if (ViewBag.error == true)
+        {
+            <label class="ml-3" style="color: red; font-size: 12px;">Please enter an existing request id</label>
+        }
+    </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
