--- a/pweb_eCarSharing/Views/Vehicle/RemVehicle.cshtml
+++ b/pweb_eCarSharing/Views/Vehicle/RemVehicle.cshtml
@@ -8,13 +8,17 @@
         <h4>Remove Vehicle by ID</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <label>Id of the vehicle to remove:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.vehicleID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.vehicleID, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label>Id of the vehicle to remove:</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.vehicleID, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.vehicleID, "", new { @class = "text-danger" })
         </div>
+        @if (ViewBag.error == true)
+        {
+            <label class="ml-3" style="color: red; font-size: 12px;"> Please enter an existing vehicle id</label>
+        }
+    </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
