--- a/pweb_eCarSharing/Views/Shared/_Layout.cshtml
+++ b/pweb_eCarSharing/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="@Url.Content("~/Content/favicon.ico")" />
     <title>@ViewBag.Title eCarSharing</title>
     @Styles.Render("~/Content/css")
 
